[gd_scene load_steps=7 format=2]

[ext_resource path="res://PowerUps/PowerUpBase.gd" type="Script" id=1]
[ext_resource path="res://tex/paddle.png" type="Texture" id=2]
[ext_resource path="res://tex/block.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "Collect"
tracks/0/type = "value"
tracks/0/path = NodePath("Particles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.287174, 0.287174 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Base:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Base:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "destroy"
} ]
}

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 16, 16, 1 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 68.83
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0.756863, 0.423529, 0.356863, 1 )

[node name="PowerUp" type="Node2D"]
script = ExtResource( 1 )

[node name="Sensor" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sensor"]
shape = SubResource( 1 )

[node name="Base" type="Sprite" parent="."]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 6.284, 1.997, 16, 16 )

[node name="Icon" type="Sprite" parent="Base"]
position = Vector2( -1.19209e-07, 2.38419e-07 )
scale = Vector2( 0.37, 0.412162 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 25.151, 37.003 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Collect = SubResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 200
process_material = SubResource( 3 )
[connection signal="area_entered" from="Sensor" to="." method="_on_Sensor_area_entered"]
[connection signal="body_entered" from="Sensor" to="." method="_on_Sensor_body_entered"]
